conf/02-traefik-svc.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
#          image: containous/traefik:latest
#          imagePullPolicy: Never
          image: traefik:v2.1
          imagePullPolicy: Always
          args:
            - --log.level=DEBUG
            - --api
            - --api.insecure
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --entrypoints.api.address=:8000
            - --providers.kubernetescrd
            - --providers.file.directory=/etc/traefik/conf/
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: api
              containerPort: 8000
            - name: admin
              containerPort: 8080

          volumeMounts:
            - mountPath: /etc/traefik/conf/dynamic.toml
              name: traefik-dynamic-configmap
              subPath: dynamic.toml
              readOnly: true

      volumes:
        - name: traefik-dynamic-configmap
          configMap:
            name: traefik-dynamic-configmap

---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
    - protocol: TCP
      port: 443
      name: websecure
      targetPort: 443
    - protocol: TCP
      port: 8080
      name: admin
      targetPort: 8080
    - protocol: TCP
      port: 8000
      name: api
      targetPort: 8000
  type: LoadBalancer
